fixed nab-menu items overflow issue

--- a/antora-ui-camel/src/css/nav.css
+++ b/antora-ui-camel/src/css/nav.css
@@ -122,6 +122,7 @@ html.is-clipped--nav {
   padding: 0.5rem 0.75rem;
   line-height: var(--nav-line-height);
   position: relative;
+  word-break: break-word;
 }
 
 .nav-menu h3.title {
